Construção de Compiladores/8 - Contrução de compiladores/8 - Contrução de compiladores/translator-TEMPLATE/translator-TEMPLATE/bin/sintatica.output
Rules useless in parser due to conflicts

   54 exp: TK_ID


State 5 conflicts: 1 shift/reduce
State 8 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 38 conflicts: 53 shift/reduce, 140 reduce/reduce
State 47 conflicts: 1 shift/reduce
State 48 conflicts: 45 shift/reduce
State 51 conflicts: 45 shift/reduce
State 52 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce, 85 reduce/reduce
State 98 conflicts: 54 shift/reduce, 70 reduce/reduce
State 99 conflicts: 1 shift/reduce
State 101 conflicts: 11 shift/reduce
State 102 conflicts: 5 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce, 80 reduce/reduce
State 117 conflicts: 1 shift/reduce, 1 reduce/reduce
State 118 conflicts: 1 shift/reduce, 1 reduce/reduce
State 120 conflicts: 53 shift/reduce, 140 reduce/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 45 shift/reduce
State 147 conflicts: 1 shift/reduce, 1 reduce/reduce
State 151 conflicts: 45 shift/reduce
State 152 conflicts: 45 shift/reduce
State 153 conflicts: 45 shift/reduce
State 154 conflicts: 45 shift/reduce
State 155 conflicts: 45 shift/reduce
State 156 conflicts: 45 shift/reduce
State 157 conflicts: 45 shift/reduce
State 158 conflicts: 45 shift/reduce
State 159 conflicts: 45 shift/reduce
State 160 conflicts: 45 shift/reduce
State 161 conflicts: 45 shift/reduce
State 162 conflicts: 44 shift/reduce
State 163 conflicts: 44 shift/reduce
State 164 conflicts: 44 shift/reduce
State 165 conflicts: 44 shift/reduce
State 166 conflicts: 44 shift/reduce
State 173 conflicts: 1 shift/reduce
State 180 conflicts: 54 shift/reduce, 70 reduce/reduce
State 220 conflicts: 1 shift/reduce
State 228 conflicts: 53 shift/reduce, 142 reduce/reduce
State 232 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce
State 234 conflicts: 1 shift/reduce, 1 reduce/reduce
State 235 conflicts: 1 shift/reduce
State 236 conflicts: 53 shift/reduce, 140 reduce/reduce
State 237 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 255 conflicts: 1 shift/reduce
State 266 conflicts: 55 shift/reduce, 71 reduce/reduce
State 270 conflicts: 53 shift/reduce, 140 reduce/reduce
State 276 conflicts: 54 shift/reduce, 70 reduce/reduce
State 283 conflicts: 53 shift/reduce, 140 reduce/reduce
State 284 conflicts: 1 shift/reduce
State 285 conflicts: 1 shift/reduce
State 286 conflicts: 53 shift/reduce, 142 reduce/reduce
State 288 conflicts: 53 shift/reduce, 71 reduce/reduce
State 289 conflicts: 1 shift/reduce
State 294 conflicts: 1 shift/reduce
State 296 conflicts: 54 shift/reduce, 70 reduce/reduce
State 297 conflicts: 53 shift/reduce, 140 reduce/reduce
State 299 conflicts: 55 shift/reduce, 71 reduce/reduce
State 305 conflicts: 53 shift/reduce, 140 reduce/reduce
State 307 conflicts: 54 shift/reduce, 70 reduce/reduce
State 313 conflicts: 54 shift/reduce, 70 reduce/reduce
State 317 conflicts: 53 shift/reduce, 140 reduce/reduce
State 318 conflicts: 2 shift/reduce, 1 reduce/reduce
State 320 conflicts: 54 shift/reduce, 70 reduce/reduce
State 324 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    2 endline: ε
    3        | TK_NL endline

    4 bloco_var: ε
    5          | TK_VAR endline lstids

    6 lstids: ε
    7       | TK_ID TK_VIRGULA lstids
    8       | TK_ID TK_OP_VAR tipo endline lstids

    9 tipo: TK_TIPO_INTEIRO
   10     | TK_TIPO_LITERAL
   11     | TK_TIPO_CARACTER
   12     | TK_TIPO_LOGICO
   13     | TK_TIPO_NUMERICO

   14 bloco_subalgo: ε
   15              | subalgoritmo bloco_subalgo

   16 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO TK_NL comandos TK_FIMPROCEDIMENTO endline
   17             | TK_FUNCAO TK_ID TK_OP arglist TK_CP TK_OP_VAR tipo TK_NL bloco_var endline TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL

   18 arglist: ε
   19        | TK_ID TK_OP_VAR tipo arglist
   20        | TK_PONTO_VIRGULA arglist
   21        | TK_VAR arglist

   22 retornofuncao: TK_RETORNE endline
   23              | TK_RETORNE exp endline

   24 comandos: ε
   25         | comando endline
   26         | comandos comando

   27 comando: exp
   28        | TK_SE exp TK_ENTAO endline comandos TK_FIMSE endline
   29        | TK_SE exp TK_ENTAO endline comandos TK_SENAO endline comandos TK_FIMSE
   30        | TK_ENQUANTO exp TK_FACA TK_NL comandos TK_FIMENQUANTO endline
   31        | TK_REPITA TK_NL comandos TK_ATE exp TK_NL
   32        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_NUM_INT passovariacao TK_FACA TK_NL comandos TK_FIMPARA endline
   33        | TK_ESCOLHA TK_ID TK_NL caselist TK_FIMESCOLHA
   34        | comandoIO endline
   35        | predefinedFuncions endline

   36 passovariacao: ε
   37              | TK_PASSO TK_NUM_INT
   38              | TK_PASSO TK_OP_SUB TK_NUM_INT

   39 caselist: TK_CASO constantlist TK_NL comandos caselist
   40         | TK_OUTROCASO TK_NL comandos

   41 constantlist: constant
   42             | constant TK_VIRGULA constantlist

   43 constant: TK_NUM
   44         | TK_NUM_INT
   45         | TK_ID
   46         | VLR_STRING
   47         | VLR_CHARACTER
   48         | TK_CONST_FALSO
   49         | TK_CONST_VERDADEIRO

   50 explist: ε
   51        | exp
   52        | exp TK_VIRGULA explist

   53 exp: TK_ID TK_OP_ATRIB exp
   54    | TK_ID
   55    | exp TK_OP_ADD exp
   56    | exp TK_OP_SUB exp
   57    | exp TK_OP_LT exp
   58    | exp TK_OP_LTEQ exp
   59    | exp TK_OP_GT exp
   60    | exp TK_OP_GTEQ exp
   61    | exp TK_OP_EQ exp
   62    | exp TK_OP_NOTEQ exp
   63    | exp TK_OP_E exp
   64    | exp TK_OP_OU exp
   65    | exp TK_OP_XOU exp
   66    | TK_OP_NAO exp
   67    | factor

   68 factor: term
   69       | factor TK_OP_MUL term
   70       | factor TK_OP_DIV term
   71       | factor TK_OP_MOD term
   72       | factor TK_OP_DIV_INT term
   73       | factor TK_OP_EXP term

   74 term: constant
   75     | TK_OP exp TK_CP
   76     | TK_OP_SUB exp
   77     | TK_ID TK_OP explist TK_CP
   78     | predefinedFuncions

   79 comandoIO: ε
   80          | TK_ESCREVA TK_OP explist TK_CP endline
   81          | TK_ESCREVAL TK_OP explist TK_CP endline
   82          | TK_LEIA TK_OP TK_ID TK_CP endline

   83 predefinedFuncions: ε
   84                   | TK_ABS TK_OP exp TK_CP
   85                   | TK_ARCCOS TK_OP exp TK_CP
   86                   | TK_ARCSEN TK_OP exp TK_CP
   87                   | TK_ARCTAN TK_OP exp TK_CP
   88                   | TK_ASC TK_OP exp TK_CP
   89                   | TK_COMPR TK_OP exp TK_CP
   90                   | TK_COPIA TK_OP exp TK_VIRGULA exp TK_VIRGULA exp TK_CP
   91                   | TK_COS TK_OP exp TK_CP
   92                   | TK_COTAN TK_OP exp TK_CP
   93                   | TK_EXP TK_OP exp TK_VIRGULA exp TK_CP
   94                   | TK_GRAUPRAD TK_OP exp TK_CP
   95                   | TK_FUN_INT TK_OP exp TK_CP
   96                   | TK_INTERROMPA
   97                   | TK_LOG TK_OP exp TK_CP
   98                   | TK_LOGN TK_OP exp TK_CP
   99                   | TK_MAIUSC TK_OP exp TK_CP
  100                   | TK_MINUSC TK_OP exp TK_CP
  101                   | TK_NUMPCARAC TK_OP exp TK_CP
  102                   | TK_PI
  103                   | TK_POS TK_OP exp TK_VIRGULA exp TK_CP
  104                   | TK_QUAD TK_OP exp TK_CP
  105                   | TK_RADPGRAU TK_OP exp TK_CP
  106                   | TK_RAIZQ TK_OP exp TK_CP
  107                   | TK_RAND
  108                   | TK_RANDI TK_OP exp TK_CP
  109                   | TK_SEN TK_OP exp TK_CP
  110                   | TK_TAN TK_OP exp TK_CP
  111                   | TK_ALEATORIO
  112                   | TK_CRONOMETRO
  113                   | TK_DEBUG
  114                   | TK_ECO
  115                   | TK_PAUSA
  116                   | TK_TIMER
  117                   | TK_ARQUIVO
  118                   | TK_MENSAGEM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VLR_STRING (258) 1 46
    VLR_CHARACTER (259) 47
    TK_ALGORITMO (260) 1
    TK_INICIO (261) 1 16 17
    TK_FIMALGORITMO (262) 1
    TK_VAR (263) 5 21
    TK_TIPO_INTEIRO (264) 9
    TK_TIPO_LITERAL (265) 10
    TK_TIPO_CARACTER (266) 11
    TK_TIPO_LOGICO (267) 12
    TK_TIPO_NUMERICO (268) 13
    TK_OP_ATRIB (269) 53
    TK_OP (270) 16 17 75 77 80 81 82 84 85 86 87 88 89 90 91 92 93 94 95 97 98 99 100 101 103 104 105 106 108 109 110
    TK_CP (271) 16 17 75 77 80 81 82 84 85 86 87 88 89 90 91 92 93 94 95 97 98 99 100 101 103 104 105 106 108 109 110
    TK_OP_VAR (272) 8 17 19
    TK_VIRGULA (273) 7 42 52 90 93 103
    TK_PONTO_VIRGULA (274) 20
    TK_OP_E (275) 63
    TK_OP_NAO (276) 66
    TK_OP_OU (277) 64
    TK_OP_XOU (278) 65
    TK_CONST_FALSO (279) 48
    TK_CONST_VERDADEIRO (280) 49
    TK_OP_ADD (281) 55
    TK_OP_SUB (282) 38 56 76
    TK_UMINUS (283)
    TK_OP_MUL (284) 69
    TK_OP_DIV (285) 70
    TK_OP_DIV_INT (286) 72
    TK_OP_MOD (287) 71
    TK_OP_EXP (288) 73
    TK_OP_GT (289) 59
    TK_OP_GTEQ (290) 60
    TK_OP_LT (291) 57
    TK_OP_LTEQ (292) 58
    TK_OP_EQ (293) 61
    TK_OP_NOTEQ (294) 62
    TK_SE (295) 28 29
    TK_ENTAO (296) 28 29
    TK_SENAO (297) 29
    TK_FIMSE (298) 28 29
    TK_ESCOLHA (299) 33
    TK_CASO (300) 39
    TK_OUTROCASO (301) 40
    TK_FIMESCOLHA (302) 33
    TK_LEIA (303) 82
    TK_ESCREVA (304) 80
    TK_ESCREVAL (305) 81
    TK_ENQUANTO (306) 30
    TK_FIMENQUANTO (307) 30
    TK_REPITA (308) 31
    TK_PARA (309) 32
    TK_DE (310) 32
    TK_ATE (311) 31 32
    TK_PASSO (312) 37 38
    TK_FACA (313) 30 32
    TK_FIMPARA (314) 32
    TK_FUNCAO (315) 17
    TK_FIMFUNCAO (316) 17
    TK_RETORNE (317) 22 23
    TK_INTERROMPA (318) 96
    TK_PROCEDIMENTO (319) 16
    TK_FIMPROCEDIMENTO (320) 16
    TK_SEN (321) 109
    TK_COS (322) 91
    TK_TAN (323) 110
    TK_ARCSEN (324) 86
    TK_ARCCOS (325) 85
    TK_ARCTAN (326) 87
    TK_COTAN (327) 92
    TK_GRAUPRAD (328) 94
    TK_RADPGRAU (329) 105
    TK_EXP (330) 93
    TK_RAIZQ (331) 106
    TK_LOG (332) 97
    TK_LOGN (333) 98
    TK_POS (334) 103
    TK_ASC (335) 88
    TK_COMPR (336) 89
    TK_COPIA (337) 90
    TK_MAIUSC (338) 99
    TK_MINUSC (339) 100
    TK_NUMPCARAC (340) 101
    TK_ALEATORIO (341) 111
    TK_RAND (342) 107
    TK_RANDI (343) 108
    TK_ABS (344) 84
    TK_PI (345) 102
    TK_QUAD (346) 104
    TK_FUN_INT (347) 95
    TK_CRONOMETRO (348) 112
    TK_DEBUG (349) 113
    TK_ECO (350) 114
    TK_PAUSA (351) 115
    TK_TIMER (352) 116
    TK_ARQUIVO (353) 117
    TK_MENSAGEM (354) 118
    TK_NL (355) 1 3 16 17 30 31 32 33 39 40
    TK_NUM (356) 43
    TK_NUM_INT (357) 32 37 38 44
    TK_ID (358) 7 8 16 17 19 32 33 45 53 54 77 82


Nonterminals, with rules where they appear

    $accept (104)
        on left: 0
    programa (105)
        on left: 1
        on right: 0
    endline (106)
        on left: 2 3
        on right: 1 3 5 8 16 17 22 23 25 28 29 30 32 34 35 80 81 82
    bloco_var (107)
        on left: 4 5
        on right: 1 16 17
    lstids (108)
        on left: 6 7 8
        on right: 5 7 8
    tipo (109)
        on left: 9 10 11 12 13
        on right: 8 17 19
    bloco_subalgo (110)
        on left: 14 15
        on right: 1 15
    subalgoritmo (111)
        on left: 16 17
        on right: 15
    arglist (112)
        on left: 18 19 20 21
        on right: 16 17 19 20 21
    retornofuncao (113)
        on left: 22 23
        on right: 17
    comandos (114)
        on left: 24 25 26
        on right: 1 16 17 26 28 29 30 31 32 39 40
    comando (115)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 25 26
    passovariacao (116)
        on left: 36 37 38
        on right: 32
    caselist (117)
        on left: 39 40
        on right: 33 39
    constantlist (118)
        on left: 41 42
        on right: 39 42
    constant (119)
        on left: 43 44 45 46 47 48 49
        on right: 41 42 74
    explist (120)
        on left: 50 51 52
        on right: 52 77 80 81
    exp (121)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 23 27 28 29 30 31 51 52 53 55 56 57 58 59 60 61 62 63 64 65 66 75 76 84 85 86 87 88 89 90 91 92 93 94 95 97 98 99 100 101 103 104 105 106 108 109 110
    factor (122)
        on left: 68 69 70 71 72 73
        on right: 67 69 70 71 72 73
    term (123)
        on left: 74 75 76 77 78
        on right: 68 69 70 71 72 73
    comandoIO (124)
        on left: 79 80 81 82
        on right: 34
    predefinedFuncions (125)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 35 78


State 0

    0 $accept: • programa $end

    TK_ALGORITMO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TK_ALGORITMO • VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    VLR_STRING  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: TK_ALGORITMO VLR_STRING • endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    $default  reduce using rule 2 (endline)

    endline  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    3 endline: TK_NL • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 7


State 6

    1 programa: TK_ALGORITMO VLR_STRING endline • bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_VAR  shift, and go to state 8

    $default  reduce using rule 4 (bloco_var)

    bloco_var  go to state 9


State 7

    3 endline: TK_NL endline •

    $default  reduce using rule 3 (endline)


State 8

    5 bloco_var: TK_VAR • endline lstids

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 10


State 9

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var • bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_FUNCAO        shift, and go to state 11
    TK_PROCEDIMENTO  shift, and go to state 12

    $default  reduce using rule 14 (bloco_subalgo)

    bloco_subalgo  go to state 13
    subalgoritmo   go to state 14


State 10

    5 bloco_var: TK_VAR endline • lstids

    TK_ID  shift, and go to state 15

    $default  reduce using rule 6 (lstids)

    lstids  go to state 16


State 11

   17 subalgoritmo: TK_FUNCAO • TK_ID TK_OP arglist TK_CP TK_OP_VAR tipo TK_NL bloco_var endline TK_INICIO TK_NL comandos retornofuncao TK_FIMFUNCAO TK_NL

    TK_ID  shift, and go to state 17


State 12
